sources styling: fixing overflow on long source names; making styling in Edit Sources look more like regular source display

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -1571,6 +1571,15 @@ li .iconWithStat {
   margin-bottom: 4px;
 }
 
+.sourceLabel {
+  max-width: 250px;
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  vertical-align: bottom;
+}
+
 a.source {
   font-size: @fontSizeTertiaryUX2;
   color: @smallGreyLinkColor; 
@@ -1593,6 +1602,7 @@ a.source {
 
 .editSourcesList .source {
   font-size: @fontSizePointTitle;
+  display: inline-block;
 }
 
 
